fix contrast in sidebar when hovering (a11y), fixes #4782
Closes #4782

Merge request studip/studip!3580

--- a/resources/assets/stylesheets/highcontrast.scss
+++ b/resources/assets/stylesheets/highcontrast.scss
@@ -249,7 +249,7 @@ button.button[disabled]:hover {
 .widget-links.sidebar-views > li:hover button,
 .widget-links.sidebar-views > li:hover a {
     color: $black;
-    background-color: $medium-gray;
+    background-color: $darkergray;
 }
 
 
